update target so jump scroll will not be covered by fixed header

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,6 +23,9 @@ body {
 
 .container {
   width: 90%;
-  margin: 0 auto;
+  margin: auto;
+}
+
+:target {
   padding-top: 120px;
 }
